# pulseaudio-next-sink

./: Cargo.toml  LICENSE  README.md  main.rs  project.sublime-project
samples/: pactl_info.txt  pactl_list_sink-inputs_short.txt
